fixed emulator issue

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,7 +52,7 @@ flutter:
     - assets/images/3.png
     - assets/images/4.png
     - assets/images/5.png
-    - assets/images/logo.jpg
+    - assets/images/logo.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
