--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  dio: ^3.0.8
+  webview_flutter: ^1.0.1
+  stripe_sdk: ^3.0.1+1
+  
 
 
   # The following adds the Cupertino Icons font to your application.
